# HumanModels

./: .gitignore  .travis.yml  HumanModel.py  README.md  README.rst  old_README.md  requirements.txt  setup.cfg
docs/: conf.py  humanmodels.rst  index.rst  requirements.txt
examples/: example-humanclassifier.py  example-humanregressor.py
humanmodels/: __init__.py  humanmodels.py
src/humanmodel/: HumanModel.py  __init__.py
src/humanmodels/: HumanClassifier.py  HumanRegressor.py  __init__.py
tests/: test_operations.py
