[metadata]
# replace with your username:
name = humanmodels
version = 0.0.6
author = Alberto Tonda
author_email = alberto.tonda@gmail.com
description = scikit-learn compatible human-defined models for classification and regression
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pypa/humanmodels
project_urls =
    Bug Tracker = https://github.com/pypa/humanmodels/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = humanmodels
packages = find:
python_requires = >=3.6

[options.packages.find]
where = humanmodels
